--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.53.4",
     "@tailwindcss/postcss": "^4.1.16",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
