--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
     "openai": "^6.7.0",
     "pdf-lib": "^1.17.1",
